# pycallgraph

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  dev-env.yaml  environment.yaml  pyproject.toml  setup.cfg  sonar-project.properties
.github/workflows/: build.yml  main.yml
docs/guide/filtering/: generate.py
examples/gephi/: basic.py
examples/graphviz/: all.py  basic.py  colors.py  filter.py  grouper.py  import.py  large.py  recursive.py  regexp.py
examples/graphviz/example_with_submodules/: __init__.py  example_with_submodules.py  submodule_two.py
pycallgraph/: __init__.py  color.py  config.py  conftest.py  metadata.py  pycallgraph.py  tracer.py
pycallgraph/output/: __init__.py  gephi.py  graphviz.py  output.py  pickle.py
pycallgraph/output/test/: test_gephi.py  test_graphviz.py  test_output.py
pycallgraph/test/: __init__.py  fix_path.py  test_color.py  test_config.py  test_decorators.py  test_pycallgraph.py  test_script.py  test_trace_processor.py  test_util.py
scripts/: pycallgraph
test/: sample.py  test_trace_processor.py
