[tool.poetry]
name = "pycallgraph"
version = "1.0.1"
description = ""
authors = ["Essi Alizadeh <pycallgraph@ealizadeh.com>"]

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
secondary = true

[tool.poetry.dependencies]
python = "^3.6.1"
memory_profiler="^0.58.0"
psutil="^5.8.0"
requests = "^2.25.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
ipdb = "^0.13.4"
pre-commit = "^2.9.3"
sphinx = "^3.4.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"