[tool.poetry]
name = "callgraph4py"
version = "2.0.0"
description = "Create a Call Graph"
authors = ["Essi Alizadeh <pycallgraph@ealizadeh.com>"]
readme = "README.md"

packages = [
    { include = "pycallgraph" }
]
exclude = ["*/tests"]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
secondary = true

[tool.poetry.dependencies]
python = "^3.6.1"
memory_profiler="^0.58.0"
psutil="^5.8.0"
requests = "^2.25.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
ipdb = "^0.13.4"
pre-commit = "^2.9.3"
sphinx = "^3.4.1"
jedi = "0.17.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"